tests/react_create_element/react_create_element.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot call `React.createElement` without at least 1 argument. [missing-arg]

   5| React.createElement(); // Error: Needs a minimum of two arguments.
      ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:7:21

Cannot call `React.createElement` because number [1] is not a React component. [not-a-component]

   7| React.createElement(42); // Error: Number is not a valid component type.
                          ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:7:21

Cannot instantiate `React.Element` because in type argument `ElementType`: [incompatible-type-arg]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with AbstractComponent [3].

   test.js:7:21
     7| React.createElement(42); // Error: Number is not a valid component type.
                            ^^ [1]

References:
   <BUILTINS>/react.js:135:5
   135|   | string
            ^^^^^^ [2]
   <BUILTINS>/react.js:136:5
   136|   | React$AbstractComponent<empty, mixed, React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:9:21

Cannot call `React.createElement` because number [1] is not a React component. [not-a-component]

   9| React.createElement(42, {}); // Error: Number is not a valid component type.
                          ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:9:21

Cannot instantiate `React.Element` because in type argument `ElementType`: [incompatible-type-arg]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with AbstractComponent [3].

   test.js:9:21
     9| React.createElement(42, {}); // Error: Number is not a valid component type.
                            ^^ [1]

References:
   <BUILTINS>/react.js:135:5
   135|   | string
            ^^^^^^ [2]
   <BUILTINS>/react.js:136:5
   136|   | React$AbstractComponent<empty, mixed, React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:10:21

Cannot call `React.createElement` because object literal [1] is not a React component. [not-a-component]

   10| React.createElement({}, {}); // Error: Object is not a valid component type.
                           ^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:10:21

Cannot instantiate `React.Element` because in type argument `ElementType`: [incompatible-type-arg]
 - Either object literal [1] is incompatible with AbstractComponent [2].
 - Or object literal [1] is incompatible with string [3].

   test.js:10:21
    10| React.createElement({}, {}); // Error: Object is not a valid component type.
                            ^^ [1]

References:
   <BUILTINS>/react.js:136:5
   136|   | React$AbstractComponent<empty, mixed, React$Node>;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:135:5
   135|   | string
            ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:20:8

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:20:8
   20|   bar: 'Hello, world!', // Error: `bar` is a string.
              ^^^^^^^^^^^^^^^ [1]

References:
   test.js:13:52
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:8

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:24:8
   24|   bar: 'Hello, world!', // Error: `bar` is a string.
              ^^^^^^^^^^^^^^^ [1]

References:
   test.js:14:38
   14| function B(props: {foo: number, bar: number}) { return null }
                                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:26:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:26:24
   26| React.createElement(A, {foo: 42}); // Error: `bar` is missing.
                              ^^^^^^^^^ [1]

References:
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:27:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:27:24
   27| React.createElement(B, {foo: 42}); // Error: `bar` is missing.
                              ^^^^^^^^^ [1]

References:
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:28:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:28:24
   28| React.createElement(A, undefined); // Error: `foo` and `bar` are missing.
                              ^^^^^^^^^ [1]

References:
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:28:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:28:24
   28| React.createElement(A, undefined); // Error: `foo` and `bar` are missing.
                              ^^^^^^^^^ [1]

References:
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:29:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:29:24
   29| React.createElement(B, undefined); // Error: `foo` and `bar` are missing.
                              ^^^^^^^^^ [1]

References:
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:29:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:29:24
   29| React.createElement(B, undefined); // Error: `foo` and `bar` are missing.
                              ^^^^^^^^^ [1]

References:
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:30:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:30:24
   30| React.createElement(A, null); // Error: `foo` and `bar` are missing.
                              ^^^^ [1]

References:
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:30:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:30:24
   30| React.createElement(A, null); // Error: `foo` and `bar` are missing.
                              ^^^^ [1]

References:
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:31:24

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:31:24
   31| React.createElement(B, null); // Error: `foo` and `bar` are missing.
                              ^^^^ [1]

References:
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:31:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:31:24
   31| React.createElement(B, null); // Error: `foo` and `bar` are missing.
                              ^^^^ [1]

References:
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:2

Cannot cast `React.createElement(...)` to `React.Element` because number [1] is incompatible with boolean [2] in
property `foo` of type argument `P` [3]. [incompatible-cast]

   test.js:34:2
    34| (React.createElement(A, {foo: 1, bar: 2}): React.Element<Class<A>, {foo: boolean, bar: number}>); // error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:13:39
    13| class A extends React.Component<{foo: number, bar: number}> {}
                                              ^^^^^^ [1]
   test.js:34:74
    34| (React.createElement(A, {foo: 1, bar: 2}): React.Element<Class<A>, {foo: boolean, bar: number}>); // error
                                                                                 ^^^^^^^ [2]
   <BUILTINS>/react.js:147:69
   147| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                                                            ^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:35:2

Cannot cast `React.createElement(...)` to `React.Element` because number [1] is incompatible with boolean [2] in
property `foo` of type argument `P` [3]. [incompatible-cast]

   test.js:35:2
    35| (React.createElement(B, {foo: 1, bar: 2}): React.Element<typeof B, {foo: boolean, bar: number}>); // error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:14:25
    14| function B(props: {foo: number, bar: number}) { return null }
                                ^^^^^^ [1]
   test.js:35:74
    35| (React.createElement(B, {foo: 1, bar: 2}): React.Element<typeof B, {foo: boolean, bar: number}>); // error
                                                                                 ^^^^^^^ [2]
   <BUILTINS>/react.js:147:69
   147| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                                                            ^ [3]


Error ---------------------------------------------------------------------------------------------------- test.js:36:42

Cannot get `React.createElement(...).nope` because property `nope` is missing in `React.Element` [1]. [prop-missing]

   test.js:36:42
   36| React.createElement(A, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                                ^^^^

References:
   test.js:36:1
   36| React.createElement(A, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:37:42

Cannot get `React.createElement(...).nope` because property `nope` is missing in `React.Element` [1]. [prop-missing]

   test.js:37:42
   37| React.createElement(B, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                                ^^^^

References:
   test.js:37:1
   37| React.createElement(B, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:38:7

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:38:7
   38| React.createElement(A); // Error: Missing `foo` and `bar`.
             ^^^^^^^^^^^^^

References:
   test.js:38:1
   38| React.createElement(A); // Error: Missing `foo` and `bar`.
       ^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:7

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:38:7
   38| React.createElement(A); // Error: Missing `foo` and `bar`.
             ^^^^^^^^^^^^^

References:
   test.js:38:1
   38| React.createElement(A); // Error: Missing `foo` and `bar`.
       ^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:13:33
   13| class A extends React.Component<{foo: number, bar: number}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:7

Cannot call `React.createElement` because property `bar` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:39:7
   39| React.createElement(B); // Error: Missing `foo` and `bar`.
             ^^^^^^^^^^^^^

References:
   test.js:39:1
   39| React.createElement(B); // Error: Missing `foo` and `bar`.
       ^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:7

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:39:7
   39| React.createElement(B); // Error: Missing `foo` and `bar`.
             ^^^^^^^^^^^^^

References:
   test.js:39:1
   39| React.createElement(B); // Error: Missing `foo` and `bar`.
       ^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:14:19
   14| function B(props: {foo: number, bar: number}) { return null }
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:51:8

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:51:8
   51|   bar: 'Hello, world!', // Error: `bar` is a string.
              ^^^^^^^^^^^^^^^ [1]

References:
   test.js:41:52
   41| class C extends React.Component<{foo: number, bar: number}> {
                                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:55:8

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:55:8
   55|   bar: 'Hello, world!', // Error: `bar` is a string.
              ^^^^^^^^^^^^^^^ [1]

References:
   test.js:44:38
   44| function D(props: {foo: number, bar: number}) { return null }
                                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:65:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:65:24
   65| React.createElement(E, {}); // Error
                              ^^ [1]

References:
   test.js:64:33
   64| class E extends React.Component<{children: number}> {}
                                       ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:66:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:66:24
   66| React.createElement(E, undefined); // Error
                              ^^^^^^^^^ [1]

References:
   test.js:64:33
   64| class E extends React.Component<{children: number}> {}
                                       ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:67:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:67:24
   67| React.createElement(E, null); // Error
                              ^^^^ [1]

References:
   test.js:64:33
   64| class E extends React.Component<{children: number}> {}
                                       ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:71:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:71:24
   71| React.createElement(E, {}, 1, 2); // Error
                              ^^

References:
   test.js:71:1
   71| React.createElement(E, {}, 1, 2); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:72:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:72:24
   72| React.createElement(E, undefined, 1, 2); // Error
                              ^^^^^^^^^

References:
   test.js:72:1
   72| React.createElement(E, undefined, 1, 2); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:73:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:73:24
   73| React.createElement(E, null, 1, 2); // Error
                              ^^^^

References:
   test.js:73:1
   73| React.createElement(E, null, 1, 2); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:74:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:74:24
   74| React.createElement(E, {}, 1, 2, 3); // Error
                              ^^

References:
   test.js:74:1
   74| React.createElement(E, {}, 1, 2, 3); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:75:24

Cannot call `React.createElement` because array literal [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:75:24
   75| React.createElement(E, {}, [1, 2]); // Error
                              ^^

References:
   test.js:75:28
   75| React.createElement(E, {}, [1, 2]); // Error
                                  ^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:76:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:76:24
   76| React.createElement(E, {}, [1, 2], [3, 4]); // Error
                              ^^

References:
   test.js:76:1
   76| React.createElement(E, {}, [1, 2], [3, 4]); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:77:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:77:24
   77| React.createElement(E, {}, ...[]); // Error
                              ^^ [1]

References:
   test.js:64:33
   64| class E extends React.Component<{children: number}> {}
                                       ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:79:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:79:24
   79| React.createElement(E, {}, ...[1, 2]); // Error
                              ^^

References:
   test.js:79:1
   79| React.createElement(E, {}, ...[1, 2]); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:80:24

Cannot call `React.createElement` because children array or array [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:80:24
   80| React.createElement(E, {}, ...(any: Array<number>)); // Error
                              ^^

References:
   test.js:80:1
   80| React.createElement(E, {}, ...(any: Array<number>)); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:80:24

Cannot call `React.createElement` because undefined [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:80:24
   80| React.createElement(E, {}, ...(any: Array<number>)); // Error
                              ^^

References:
   test.js:80:1
   80| React.createElement(E, {}, ...(any: Array<number>)); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:82:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:82:24
   82| React.createElement(E, {}, 1, ...[2]); // Error
                              ^^

References:
   test.js:82:1
   82| React.createElement(E, {}, 1, ...[2]); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:83:24

Cannot call `React.createElement` because children array or number [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:83:24
   83| React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
                              ^^

References:
   test.js:83:1
   83| React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:64:44
   64| class E extends React.Component<{children: number}> {}
                                                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:86:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:86:24
   86| React.createElement(F, {}); // Error
                              ^^ [1]

References:
   test.js:85:33
   85| class F extends React.Component<{children: Array<number>}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:87:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:87:24
   87| React.createElement(F, undefined); // Error
                              ^^^^^^^^^ [1]

References:
   test.js:85:33
   85| class F extends React.Component<{children: Array<number>}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:88:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:88:24
   88| React.createElement(F, null); // Error
                              ^^^^ [1]

References:
   test.js:85:33
   85| class F extends React.Component<{children: Array<number>}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:89:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:89:24
   89| React.createElement(F, {}, 1); // Error
                              ^^

References:
   test.js:89:28
   89| React.createElement(F, {}, 1); // Error
                                  ^ [1]
   test.js:85:44
   85| class F extends React.Component<{children: Array<number>}> {}
                                                  ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:90:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:90:24
   90| React.createElement(F, undefined, 1); // Error
                              ^^^^^^^^^

References:
   test.js:90:35
   90| React.createElement(F, undefined, 1); // Error
                                         ^ [1]
   test.js:85:44
   85| class F extends React.Component<{children: Array<number>}> {}
                                                  ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:91:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:91:24
   91| React.createElement(F, null, 1); // Error
                              ^^^^

References:
   test.js:91:30
   91| React.createElement(F, null, 1); // Error
                                    ^ [1]
   test.js:85:44
   85| class F extends React.Component<{children: Array<number>}> {}
                                                  ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:97:24

Cannot call `React.createElement` because array literal [1] is incompatible with number [2] in array element of property
`children`. [incompatible-call]

   test.js:97:24
   97| React.createElement(F, {}, [1, 2], [3, 4]); // Error
                              ^^

References:
   test.js:97:28
   97| React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                  ^^^^^^ [1]
   test.js:85:50
   85| class F extends React.Component<{children: Array<number>}> {}
                                                        ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:97:24

Cannot call `React.createElement` because array literal [1] is incompatible with number [2] in array element of property
`children`. [incompatible-call]

   test.js:97:24
   97| React.createElement(F, {}, [1, 2], [3, 4]); // Error
                              ^^

References:
   test.js:97:36
   97| React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                          ^^^^^^ [1]
   test.js:85:50
   85| class F extends React.Component<{children: Array<number>}> {}
                                                        ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:98:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:98:24
   98| React.createElement(F, {}, ...[]); // Error
                              ^^ [1]

References:
   test.js:85:33
   85| class F extends React.Component<{children: Array<number>}> {}
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:99:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:99:24
   99| React.createElement(F, {}, ...[1]); // Error
                              ^^

References:
   test.js:99:32
   99| React.createElement(F, {}, ...[1]); // Error
                                      ^ [1]
   test.js:85:44
   85| class F extends React.Component<{children: Array<number>}> {}
                                                  ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:101:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:101:24
   101| React.createElement(F, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:85:50
    85| class F extends React.Component<{children: Array<number>}> {}
                                                         ^^^^^^ [1]
   test.js:85:44
    85| class F extends React.Component<{children: Array<number>}> {}
                                                   ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:101:24

Cannot call `React.createElement` because undefined [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:101:24
   101| React.createElement(F, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:101:1
   101| React.createElement(F, {}, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:85:44
    85| class F extends React.Component<{children: Array<number>}> {}
                                                   ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:101:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:101:24
   101| React.createElement(F, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:101:43
   101| React.createElement(F, {}, ...(any: Array<number>)); // Error
                                                  ^^^^^^ [1]
   test.js:85:44
    85| class F extends React.Component<{children: Array<number>}> {}
                                                   ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:102:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:102:24
   102| React.createElement(F, {}, 1, ...[]); // Error
                               ^^

References:
   test.js:102:28
   102| React.createElement(F, {}, 1, ...[]); // Error
                                   ^ [1]
   test.js:85:44
    85| class F extends React.Component<{children: Array<number>}> {}
                                                   ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:104:24

Cannot call `React.createElement` because number [1] is incompatible with array type [2] in property `children`.
[incompatible-call]

   test.js:104:24
   104| React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:104:28
   104| React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
                                   ^ [1]
   test.js:85:44
    85| class F extends React.Component<{children: Array<number>}> {}
                                                   ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:107:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:107:24
   107| React.createElement(G, {}); // Error
                               ^^ [1]

References:
   test.js:106:33
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:112:24

Cannot call `React.createElement` because in property `children`: [incompatible-call]
 - Either array literal [1] is incompatible with number [2] in array element.
 - Or children array [3] is incompatible with number [4].

   test.js:112:24
   112| React.createElement(G, {}, [1, 2], [3, 4]); // Error
                               ^^

References:
   test.js:112:28
   112| React.createElement(G, {}, [1, 2], [3, 4]); // Error
                                   ^^^^^^ [1]
   test.js:106:59
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                                                  ^^^^^^ [2]
   test.js:112:1
   112| React.createElement(G, {}, [1, 2], [3, 4]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   test.js:106:44
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                                   ^^^^^^ [4]


Error --------------------------------------------------------------------------------------------------- test.js:113:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:113:24
   113| React.createElement(G, {}, ...[]); // Error
                               ^^ [1]

References:
   test.js:106:33
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:116:24

Cannot call `React.createElement` because in property `children`: [incompatible-call]
 - Either undefined [1] is incompatible with number [2].
 - Or undefined [1] is incompatible with array type [3].

   test.js:116:24
   116| React.createElement(G, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:116:1
   116| React.createElement(G, {}, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:106:44
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                                   ^^^^^^ [2]
   test.js:106:53
   106| class G extends React.Component<{children: number | Array<number>}> {}
                                                            ^^^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- test.js:127:25

Cannot call `React.createElement` because in property `children`: [incompatible-call]
 - Either array literal [1] is incompatible with number [2] in array element.
 - Or children array [3] is incompatible with number [4].

   test.js:127:25
   127| React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                ^^

References:
   test.js:127:29
   127| React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                    ^^^^^^ [1]
   test.js:121:61
   121| class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                                    ^^^^^^ [2]
   test.js:127:1
   127| React.createElement(G2, {}, [1, 2], [3, 4]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   test.js:121:46
   121| class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                     ^^^^^^ [4]


Error --------------------------------------------------------------------------------------------------- test.js:138:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:138:24
   138| React.createElement(H, {}); // Error
                               ^^ [1]

References:
   test.js:137:33
   137| class H extends React.Component<{children: NumberArrayRecursive}> {}
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:144:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:144:24
   144| React.createElement(H, {}, ...[]); // Error
                               ^^ [1]

References:
   test.js:137:33
   137| class H extends React.Component<{children: NumberArrayRecursive}> {}
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:147:24

Cannot call `React.createElement` because in property `children`: [incompatible-call]
 - Either undefined [1] is incompatible with number [2].
 - Or undefined [1] is incompatible with array type [3].

   test.js:147:24
   147| React.createElement(H, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:147:1
   147| React.createElement(H, {}, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:136:29
   136| type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                    ^^^^^^ [2]
   test.js:136:38
   136| type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- test.js:155:24

Cannot call `React.createElement` because null [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:155:24
   155| React.createElement(I, {}, null); // Error
                               ^^

References:
   test.js:155:28
   155| React.createElement(I, {}, null); // Error
                                   ^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:157:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:157:24
   157| React.createElement(I, {}, 1, 2); // Error
                               ^^

References:
   test.js:157:1
   157| React.createElement(I, {}, 1, 2); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:160:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:160:24
   160| React.createElement(I, {}, ...[1, 2]); // Error
                               ^^

References:
   test.js:160:1
   160| React.createElement(I, {}, ...[1, 2]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:161:24

Cannot call `React.createElement` because children array or array [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:161:24
   161| React.createElement(I, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:161:1
   161| React.createElement(I, {}, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:163:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:163:24
   163| React.createElement(I, {}, 1, ...[2]); // Error
                               ^^

References:
   test.js:163:1
   163| React.createElement(I, {}, 1, ...[2]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:164:24

Cannot call `React.createElement` because children array or number [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:164:24
   164| React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:164:1
   164| React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:152:45
   152| class I extends React.Component<{children?: number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:167:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:167:24
   167| React.createElement(J, {}); // Error
                               ^^ [1]

References:
   test.js:166:33
   166| class J extends React.Component<{children: ?number}> {}
                                        ^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:171:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:171:24
   171| React.createElement(J, {}, 1, 2); // Error
                               ^^

References:
   test.js:171:1
   171| React.createElement(J, {}, 1, 2); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:166:45
   166| class J extends React.Component<{children: ?number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:172:24

Cannot call `React.createElement` because property `children` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:172:24
   172| React.createElement(J, {}, ...[]); // Error
                               ^^ [1]

References:
   test.js:166:33
   166| class J extends React.Component<{children: ?number}> {}
                                        ^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:174:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:174:24
   174| React.createElement(J, {}, ...[1, 2]); // Error
                               ^^

References:
   test.js:174:1
   174| React.createElement(J, {}, ...[1, 2]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:166:45
   166| class J extends React.Component<{children: ?number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:175:24

Cannot call `React.createElement` because children array or array [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:175:24
   175| React.createElement(J, {}, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:175:1
   175| React.createElement(J, {}, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:166:45
   166| class J extends React.Component<{children: ?number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:177:24

Cannot call `React.createElement` because children array [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:177:24
   177| React.createElement(J, {}, 1, ...[2]); // Error
                               ^^

References:
   test.js:177:1
   177| React.createElement(J, {}, 1, ...[2]); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:166:45
   166| class J extends React.Component<{children: ?number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:178:24

Cannot call `React.createElement` because children array or number [1] is incompatible with number [2] in property
`children`. [incompatible-call]

   test.js:178:24
   178| React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
                               ^^

References:
   test.js:178:1
   178| React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:166:45
   166| class J extends React.Component<{children: ?number}> {}
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:184:24

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:184:24
   184| React.createElement(K, {}, '42'); // Error
                               ^^

References:
   test.js:184:28
   184| React.createElement(K, {}, '42'); // Error
                                   ^^^^ [1]
   test.js:180:44
   180| class K extends React.Component<{children: number}> {}
                                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:185:35

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:185:35
   185| React.createElement(K, {children: '42'}); // Error
                                          ^^^^ [1]

References:
   test.js:180:44
   180| class K extends React.Component<{children: number}> {}
                                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:187:24

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:187:24
   187| React.createElement(K, {children: 42}, '42'); // Error
                               ^^^^^^^^^^^^^^

References:
   test.js:187:40
   187| React.createElement(K, {children: 42}, '42'); // Error
                                               ^^^^ [1]
   test.js:180:44
   180| class K extends React.Component<{children: number}> {}
                                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:188:24

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:188:24
   188| React.createElement(K, {children: '42'}, '42'); // Error
                               ^^^^^^^^^^^^^^^^

References:
   test.js:188:42
   188| React.createElement(K, {children: '42'}, '42'); // Error
                                                 ^^^^ [1]
   test.js:180:44
   180| class K extends React.Component<{children: number}> {}
                                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:201:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:201:24
   201| React.createElement(L, {}, 1); // Error
                               ^^ [1]

References:
   test.js:190:33
                                        v
   190| class L extends React.Component<{
   191|   foo: number,
   192|   bar: number,
   193|   children: number,
   194| }> {
        ^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:202:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:202:24
   202| React.createElement(L, {children: 1}); // Error
                               ^^^^^^^^^^^^^ [1]

References:
   test.js:190:33
                                        v
   190| class L extends React.Component<{
   191|   foo: number,
   192|   bar: number,
   193|   children: number,
   194| }> {
        ^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:203:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:203:24
   203| React.createElement(L, {bar: 1}, 2); // Error
                               ^^^^^^^^ [1]

References:
   test.js:190:33
                                        v
   190| class L extends React.Component<{
   191|   foo: number,
   192|   bar: number,
   193|   children: number,
   194| }> {
        ^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:204:24

Cannot call `React.createElement` because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   test.js:204:24
   204| React.createElement(L, {bar: 1, children: 2}); // Error
                               ^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   test.js:190:33
                                        v
   190| class L extends React.Component<{
   191|   foo: number,
   192|   bar: number,
   193|   children: number,
   194| }> {
        ^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:205:30

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `foo`.
[incompatible-call]

   test.js:205:30
   205| React.createElement(L, {foo: '1', bar: 2}, 3); // Error
                                     ^^^ [1]

References:
   test.js:191:8
   191|   foo: number,
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:206:30

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `foo`.
[incompatible-call]

   test.js:206:30
   206| React.createElement(L, {foo: '1', bar: 2, children: 3}); // Error
                                     ^^^ [1]

References:
   test.js:191:8
   191|   foo: number,
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:207:38

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:207:38
   207| React.createElement(L, {foo: 1, bar: '2'}, 3); // Error
                                             ^^^ [1]

References:
   test.js:192:8
   192|   bar: number,
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:208:38

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-call]

   test.js:208:38
   208| React.createElement(L, {foo: 1, bar: '2', children: 3}); // Error
                                             ^^^ [1]

References:
   test.js:192:8
   192|   bar: number,
               ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:209:24

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:209:24
   209| React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
                               ^^^^^^^^^^^^^^^^

References:
   test.js:209:42
   209| React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
                                                 ^^^ [1]
   test.js:193:13
   193|   children: number,
                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:210:51

Cannot call `React.createElement` because string [1] is incompatible with number [2] in property `children`.
[incompatible-call]

   test.js:210:51
   210| React.createElement(L, {foo: 1, bar: 2, children: '3'}); // Error
                                                          ^^^ [1]

References:
   test.js:193:13
   193|   children: number,
                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- test.js:215:22

Cannot cast `React.createElement(...)` to `React.Element` because `M` [1] is incompatible with `N` [2] in type argument
`ElementType` [3]. [incompatible-cast]

   test.js:215:22
   215| (React.createElement(M): React.Element<Class<N>, any>); // Error
                             ^

References:
   test.js:212:7
   212| class M extends React.Component<{}> {}
              ^ [1]
   test.js:215:46
   215| (React.createElement(M): React.Element<Class<N>, any>); // Error
                                                     ^ [2]
   <BUILTINS>/react.js:147:36
   147| declare opaque type React$Element<+ElementType: React$ElementType, +P = React$ElementProps<ElementType>>: {...};
                                           ^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- test.js:219:24

Cannot call `React.createElement` because children array [1] has an unknown number of elements, so is incompatible with
tuple type [2] in property `children`. [invalid-tuple-arity]

   test.js:219:24
   219| React.createElement(P, null, 1, 2, ...(any: Array<number>)); // ERROR
                               ^^^^

References:
   test.js:219:1
   219| React.createElement(P, null, 1, 2, ...(any: Array<number>)); // ERROR
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:217:31
   217| declare function P({children: [1, 2]}): void;
                                      ^^^^^^ [2]



Found 96 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
